--- a/ДорожноеПриложение/ДорожноеПриложение.csproj
+++ b/ДорожноеПриложение/ДорожноеПриложение.csproj
@@ -35,8 +35,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,7 +64,61 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddEmpPage.xaml.cs">
+      <DependentUpon>AddEmpPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddTaskPage.xaml.cs">
+      <DependentUpon>AddTaskPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>МодельБазы.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Бригады.cs">
+      <DependentUpon>МодельБазы.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Задачи.cs">
+      <DependentUpon>МодельБазы.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Категории.cs">
+      <DependentUpon>МодельБазы.tt</DependentUpon>
+    </Compile>
+    <Compile Include="МодельБазы.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>МодельБазы.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="МодельБазы.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>МодельБазы.tt</DependentUpon>
+    </Compile>
+    <Compile Include="МодельБазы.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>МодельБазы.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="СкладМатериала.cs">
+      <DependentUpon>МодельБазы.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Сотрудники.cs">
+      <DependentUpon>МодельБазы.tt</DependentUpon>
+    </Compile>
+    <Compile Include="СписокРасходов.cs">
+      <DependentUpon>МодельБазы.tt</DependentUpon>
+    </Compile>
+    <Page Include="AddEmpPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddTaskPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="AuthorizPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -69,6 +132,9 @@
     </Compile>
     <Compile Include="AuthorizPage.xaml.cs">
       <DependentUpon>AuthorizPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -94,13 +160,36 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <EntityDeploy Include="МодельБазы.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>МодельБазы.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="МодельБазы.edmx.diagram">
+      <DependentUpon>МодельБазы.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="МодельБазы.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>МодельБазы.Context.cs</LastGenOutput>
+      <DependentUpon>МодельБазы.edmx</DependentUpon>
+    </Content>
+    <Content Include="МодельБазы.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>МодельБазы.edmx</DependentUpon>
+      <LastGenOutput>МодельБазы.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
