--- a/ДорожноеПриложение/ДорожноеПриложение.csproj
+++ b/ДорожноеПриложение/ДорожноеПриложение.csproj
@@ -70,6 +70,9 @@
     <Compile Include="AddTaskPage.xaml.cs">
       <DependentUpon>AddTaskPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ReportEditorWindow.xaml.cs">
+      <DependentUpon>ReportEditorWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="sysdiagrams.cs">
       <DependentUpon>МодельБазы.tt</DependentUpon>
     </Compile>
@@ -140,6 +143,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ReportEditorWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MenegerFrame.cs" />
