--- a/ДорожноеПриложение/App.config
+++ b/ДорожноеПриложение/App.config
@@ -7,13 +7,10 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <connectionStrings>
-    <add name="ДорожнаяБазаEntities" connectionString="metadata=res://*/МодельБазы.csdl|res://*/МодельБазы.ssdl|res://*/МодельБазы.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=62.63.74.62,1433;initial catalog=ДорожнаяБаза;user id=word;password=0303;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<connectionStrings><add name="ДорожнаяБазаEntities" connectionString="metadata=res://*/МодельБазы.csdl|res://*/МодельБазы.ssdl|res://*/МодельБазы.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=ДорожнаяБаза;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
