--- a/ДорожноеПриложение/App.config
+++ b/ДорожноеПриложение/App.config
@@ -13,4 +13,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="ДорожнаяБазаEntities" connectionString="metadata=res://*/МодельБазы.csdl|res://*/МодельБазы.ssdl|res://*/МодельБазы.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=ДорожнаяБаза;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="ДорожнаяБазаEntities" connectionString="metadata=res://*/МодельБазы.csdl|res://*/МодельБазы.ssdl|res://*/МодельБазы.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=62.63.74.62,1433; Initial Catalog=ДорожнаяБаза; User ID=word; Password=0303;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
