--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,20 @@
 # User-specific files
 *.rsuser
 *.suo
-*.user
+*.user_ReSharper.*/
+*.sdf
+bin/
+obj/
+Debug/
+Release/
+*.opensdf
+*.tlog
+*.log
+TestResult.xml
+*.VisualState.xml
+Version.cs
+Version.h
+Version.cpp
 *.userosscache
 *.sln.docstates
 
